@@ -3,6 +3,7 @@
 2013-11-05  Brecht Sanders  <brechtsanders@users.sourceforge.net>
 
 	* fixed line breaks in source files (UNIX EOL)
+	* show only the version of libcurl instead of all its components
 
 0.1.16
 
